--- a/index.html
+++ b/index.html
@@ -43,38 +43,38 @@ var myStyle = {
     "fillOpacity": 0.0
 };
 
-L.geoJson(districts, {
-    style: myStyle,
-    onEachFeature: function (feature, layer) {
-        // layer.bindLabel(feature.properties.DISTRICT);
-        layer.on('click', function(e) {
-            console.log(feature.properties)
-            document.getElementById("info").innerHTML = '<strong>District ' + feature.properties.DISTRICT + 
-                ': Rep. '+ feature.properties.house_social_name + '</strong><br>' +
-                feature.properties.house_social_party + '<br>' +
-                'Office: ' + feature.properties.house_social_office_phone + '<br>' +
-                'Official e-mail: ' + feature.properties.house_social_office_email + '<br>' +
-                '<a href="' + feature.properties.house_social_url + '" rel="noopener">Official website</a>'
+// L.geoJson(districts, {
+//     style: myStyle,
+//     onEachFeature: function (feature, layer) {
+//         // layer.bindLabel(feature.properties.DISTRICT);
+//         layer.on('click', function(e) {
+//             console.log(feature.properties)
+//             document.getElementById("info").innerHTML = '<strong>District ' + feature.properties.DISTRICT + 
+//                 ': Rep. '+ feature.properties.house_social_name + '</strong><br>' +
+//                 feature.properties.house_social_party + '<br>' +
+//                 'Office: ' + feature.properties.house_social_office_phone + '<br>' +
+//                 'Official e-mail: ' + feature.properties.house_social_office_email + '<br>' +
+//                 '<a href="' + feature.properties.house_social_url + '" rel="noopener">Official website</a>'
             
-            if (feature.properties.house_social_web === "") {
-                document.getElementById("own_site").innerHTML = ''}
-            else {document.getElementById("own_site").innerHTML = '<a href="' + feature.properties.house_social_web + '" rel="noopener">Personal website</a>'}
+//             if (feature.properties.house_social_web === "") {
+//                 document.getElementById("own_site").innerHTML = ''}
+//             else {document.getElementById("own_site").innerHTML = '<a href="' + feature.properties.house_social_web + '" rel="noopener">Personal website</a>'}
 
-            if (feature.properties.house_social_fb === "") {
-                document.getElementById("facebook").innerHTML = ''}
-            else {document.getElementById("facebook").innerHTML = '<a href="' + feature.properties.house_social_fb + '" rel="noopener">Facebook</a>'}
+//             if (feature.properties.house_social_fb === "") {
+//                 document.getElementById("facebook").innerHTML = ''}
+//             else {document.getElementById("facebook").innerHTML = '<a href="' + feature.properties.house_social_fb + '" rel="noopener">Facebook</a>'}
 
-            if (feature.properties.house_social_twitter === "") {
-                document.getElementById("twitter").innerHTML = ''}
-            else {document.getElementById("twitter").innerHTML = '<a href="' + feature.properties.house_social_twitter + '" rel="noopener">Twitter</a>'}
+//             if (feature.properties.house_social_twitter === "") {
+//                 document.getElementById("twitter").innerHTML = ''}
+//             else {document.getElementById("twitter").innerHTML = '<a href="' + feature.properties.house_social_twitter + '" rel="noopener">Twitter</a>'}
 
-            if (feature.properties.house_social_insta === "") {
-                document.getElementById("instagram").innerHTML = ''}
-            else {document.getElementById("instagram").innerHTML = '<a href="' + feature.properties.insta + '" rel="noopener">Instagram</a>'}
+//             if (feature.properties.house_social_insta === "") {
+//                 document.getElementById("instagram").innerHTML = ''}
+//             else {document.getElementById("instagram").innerHTML = '<a href="' + feature.properties.insta + '" rel="noopener">Instagram</a>'}
                 
-        })
-    }
-}).addTo(map);
+//         })
+//     }
+// }).addTo(map);
 
 
  </script>
