--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Georgia House</title>
 <head> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" />
 </head>
 
 <style>
@@ -20,8 +20,7 @@ width: 100%; }
 <div id="instagram"></div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
-<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-label/v0.2.1/leaflet.label.js'></script>
+<script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
 <script src="house_merged.json" type="text/javascript"></script>
 
 <script>
@@ -43,38 +42,38 @@ var myStyle = {
     "fillOpacity": 0.0
 };
 
-// L.geoJson(districts, {
-//     style: myStyle,
-//     onEachFeature: function (feature, layer) {
-//         // layer.bindLabel(feature.properties.DISTRICT);
-//         layer.on('click', function(e) {
-//             console.log(feature.properties)
-//             document.getElementById("info").innerHTML = '<strong>District ' + feature.properties.DISTRICT + 
-//                 ': Rep. '+ feature.properties.house_social_name + '</strong><br>' +
-//                 feature.properties.house_social_party + '<br>' +
-//                 'Office: ' + feature.properties.house_social_office_phone + '<br>' +
-//                 'Official e-mail: ' + feature.properties.house_social_office_email + '<br>' +
-//                 '<a href="' + feature.properties.house_social_url + '" rel="noopener">Official website</a>'
+L.geoJson(districts, {
+    style: myStyle,
+    onEachFeature: function (feature, layer) {
+        // layer.bindLabel(feature.properties.DISTRICT);
+        layer.on('click', function(e) {
+            console.log(feature.properties)
+            document.getElementById("info").innerHTML = '<strong>District ' + feature.properties.DISTRICT + 
+                ': Rep. '+ feature.properties.house_social_name + '</strong><br>' +
+                feature.properties.house_social_party + '<br>' +
+                'Office: ' + feature.properties.house_social_office_phone + '<br>' +
+                'Official e-mail: ' + feature.properties.house_social_office_email + '<br>' +
+                '<a href="' + feature.properties.house_social_url + '" rel="noopener">Official website</a>'
             
-//             if (feature.properties.house_social_web === "") {
-//                 document.getElementById("own_site").innerHTML = ''}
-//             else {document.getElementById("own_site").innerHTML = '<a href="' + feature.properties.house_social_web + '" rel="noopener">Personal website</a>'}
+            if (feature.properties.house_social_web === "") {
+                document.getElementById("own_site").innerHTML = ''}
+            else {document.getElementById("own_site").innerHTML = '<a href="' + feature.properties.house_social_web + '" rel="noopener">Personal website</a>'}
 
-//             if (feature.properties.house_social_fb === "") {
-//                 document.getElementById("facebook").innerHTML = ''}
-//             else {document.getElementById("facebook").innerHTML = '<a href="' + feature.properties.house_social_fb + '" rel="noopener">Facebook</a>'}
+            if (feature.properties.house_social_fb === "") {
+                document.getElementById("facebook").innerHTML = ''}
+            else {document.getElementById("facebook").innerHTML = '<a href="' + feature.properties.house_social_fb + '" rel="noopener">Facebook</a>'}
 
-//             if (feature.properties.house_social_twitter === "") {
-//                 document.getElementById("twitter").innerHTML = ''}
-//             else {document.getElementById("twitter").innerHTML = '<a href="' + feature.properties.house_social_twitter + '" rel="noopener">Twitter</a>'}
+            if (feature.properties.house_social_twitter === "") {
+                document.getElementById("twitter").innerHTML = ''}
+            else {document.getElementById("twitter").innerHTML = '<a href="' + feature.properties.house_social_twitter + '" rel="noopener">Twitter</a>'}
 
-//             if (feature.properties.house_social_insta === "") {
-//                 document.getElementById("instagram").innerHTML = ''}
-//             else {document.getElementById("instagram").innerHTML = '<a href="' + feature.properties.insta + '" rel="noopener">Instagram</a>'}
+            if (feature.properties.house_social_insta === "") {
+                document.getElementById("instagram").innerHTML = ''}
+            else {document.getElementById("instagram").innerHTML = '<a href="' + feature.properties.insta + '" rel="noopener">Instagram</a>'}
                 
-//         })
-//     }
-// }).addTo(map);
+        })
+    }
+}).addTo(map);
 
 
  </script>
