--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ var map = L.map('map').setView([33.85, -84.25], 11);
     
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-}).addTo(mymap);    
+}).addTo(map);    
 
 var myStyle = {
     "color": "gray",
