--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ var map = L.map('map').setView([33.85, -84.25], 11);
 //     accessToken: 'pk.eyJ1IjoiZ3JlZW5jcmFja2VyIiwiYSI6ImQ5YzBlZDY4N2E3MTRlYjE4Y2ViNmM2NTY3OWMyMjQwIn0.qzrux5_Nbh5ICwJbeMFX4Q'
 // }).addTo(map);
     
-L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 }).addTo(map);    
 
