--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@ width: 100%; }
 
 var map = L.map('map').setView([33.85, -84.25], 11);
 
-// L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-//     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-//     maxZoom: 18,
-//     id: 'greencracker.niib978j',
-//     accessToken: 'pk.eyJ1IjoiZ3JlZW5jcmFja2VyIiwiYSI6ImQ5YzBlZDY4N2E3MTRlYjE4Y2ViNmM2NTY3OWMyMjQwIn0.qzrux5_Nbh5ICwJbeMFX4Q'
-// }).addTo(map);
+L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+    maxZoom: 18
+}).addTo(map);
     
-L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-}).addTo(map);    
+// L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+//     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+// }).addTo(map);    
 
 var myStyle = {
     "color": "gray",
