--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 
 #map { height: 400px;
 width: 100%; }
+    
+#container {
+    height: 200px;
+}
 
 </style>
 
 <div id="map"></div>
-<div id="info">Click a district to start</div>
-<div id="own_site"></div>
-<div id="facebook"></div>
-<div id="twitter"></div>
-<div id="instagram"></div>
+    <div id="container">
+        <div id="info">Click a district to start</div>
+        <div id="own_site"></div>
+        <div id="facebook"></div>
+        <div id="twitter"></div>
+        <div id="instagram"></div>
+    </div>
 </div>
 
 <script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
