--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ L.geoJson(districts, {
                 feature.properties.house_social_party + '<br>' +
                 'Office: ' + feature.properties.house_social_office_phone + '<br>' +
                 'Official e-mail: ' + feature.properties.house_social_office_email + '<br>' +
-                '<a href="' + feature.properties.house_social_url + '" rel="noopener">Official website</a>'
+                '<a href="' + feature.properties.house_social_url + '" rel="noopener" target="_blank">Official website</a>'
             
             if (feature.properties.house_social_web === "") {
                 document.getElementById("own_site").innerHTML = ''}
